Adding Datatables functionality

--- a/src/AppBundle/Resources/views/Group/list.html.twig
+++ b/src/AppBundle/Resources/views/Group/list.html.twig
@@ -14,9 +14,13 @@
 
 {% block content %}
     {% include "FOSUserBundle:Group:list_content.html.twig" %}
-
-
 {% endblock content %}
 
-
+{% block footer %}
+    <script>
+        $(document).ready(function () {
+            $('#part-table').DataTable();
+        });
+    </script>
+{% endblock footer %}
 
