--- a/src/AppBundle/Resources/views/Partcategory/index.html.twig
+++ b/src/AppBundle/Resources/views/Partcategory/index.html.twig
@@ -11,12 +11,12 @@
 {% endblock page_name %}
 
 {% block content %}
-    <div class="col-md-4 col-md-offset-1">
+    <div class="col-md-6">
         <button class="btn btn-success" style="margin-bottom: 15px;">
             <a href="{{ path('admin_partcategory_new') }}">Create a new entry</a>
         </button>
-        <div class="table-responsive">
-            <table class="table table-striped table-bordered table-advance table-hover">
+        <div class="table">
+            <table id="part-table" class="table table-striped table-bordered" cellspacing="0" width="100%">
                 <thead>
                 <tr>
                     <th>Name</th>
@@ -42,3 +42,11 @@
     </div>
 
 {% endblock content %}
+
+{% block footer %}
+    <script>
+        $(document).ready(function () {
+            $('#part-table').DataTable();
+        });
+    </script>
+{% endblock footer %}
