--- a/src/AppBundle/Resources/views/Group/list_content.html.twig
+++ b/src/AppBundle/Resources/views/Group/list_content.html.twig
@@ -1,74 +1,15 @@
 <div class="row">
     <div class="col-md-12">
-        <div class="portlet">
-            <div class="portlet-title">
-                <div class="caption">
-                    <i class="fa fa-globe"></i>Offices
-                </div>
-            </div>
-            <div class="portlet-body">
-                <div id="sample_6_wrapper" class="dataTables_wrapper no-footer">
-                    <div class="row">
-                        <div class="col-md-6 col-sm-12">
-
-                        </div>
-                        <div class="col-md-6 col-sm-12">
-                        </div>
-                    </div>
-                    <div class="table-scrollable">
-                        <table class="table table-striped table-bordered table-hover dataTable no-footer" id="sample_6"
-                               role="grid" aria-describedby="sample_6_info">
+        <div class="table">
+            <table id="part-table" class="table table-striped table-bordered" cellspacing="0" width="100%">
                             <thead>
-                            <tr role="row">
-                                <th class="sorting_disabled" rowspan="1" colspan="1" aria-label="
-									 Rendering engine
-								" data-column-index="0" style="width: 210px;">
-                                    Name
-                                </th>
-                                <th class="sorting" tabindex="0" aria-controls="sample_6" rowspan="1" colspan="1"
-                                    aria-label="
-									 Browser
-								: activate to sort column ascending" data-column-index="1" style="width: 281px;">
-
-                                    Office Number
-                                </th>
-                                <th class="hidden-xs sorting" tabindex="0" aria-controls="sample_6" rowspan="1"
-                                    colspan="1" aria-label="
-									 Platform(s)
-								: activate to sort column ascending" data-column-index="2" style="width: 254px;">
-                                    Address
-                                </th>
-                                <th class="hidden-xs sorting" tabindex="0" aria-controls="sample_6" rowspan="1"
-                                    colspan="1" aria-label="
-									 Platform(s)
-								: activate to sort column ascending" data-column-index="2" style="width: 254px;">
-                                    City
-                                </th>
-                                <th class="hidden-xs sorting" tabindex="0" aria-controls="sample_6" rowspan="1"
-                                    colspan="1" aria-label="
-									 Platform(s)
-								: activate to sort column ascending" data-column-index="2" style="width: 254px;">
-                                    State
-                                </th>
-                                <th class="hidden-xs sorting" tabindex="0" aria-controls="sample_6" rowspan="1"
-                                    colspan="1" aria-label="
-									 Platform(s)
-								: activate to sort column ascending" data-column-index="2" style="width: 254px;">
-                                    Zip
-                                </th>
-                                <th class="hidden-xs sorting" tabindex="0" aria-controls="sample_6" rowspan="1"
-                                    colspan="1" aria-label="
-									 Platform(s)
-								: activate to sort column ascending" data-column-index="2" style="width: 254px;">
-                                    Phone
-                                </th>
-                                <th class="hidden-xs sorting" tabindex="0" aria-controls="sample_6" rowspan="1"
-                                    colspan="1" aria-label="
-									 Platform(s)
-								: activate to sort column ascending" data-column-index="2" style="width: 254px;">
-                                    Actions
-                                </th>
-
+                            <tr>
+                                <th>Name</th>
+                                <th>Office #</th>
+                                <th>City</th>
+                                <th>State</th>
+                                <th>Phone</th>
+                                <th>Actions</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -81,16 +22,10 @@
                                         {{ group.getOfficeNumber() }}
                                     </td>
                                     <td class="">
-                                        {{ group.getAddress() }}
-                                    </td>
-                                    <td class="">
                                         {{ group.getCity() }}
                                     </td>
                                     <td class="">
                                         {{ group.getState() }}
-                                    </td>
-                                    <td class="">
-                                        {{ group.getZip() }}
                                     </td>
                                     <td class="">
                                         {{ group.getPhone() }}
@@ -105,7 +40,6 @@
                             </tbody>
                         </table>
                     </div>
-                </div>
-            </div>
         </div>
     </div>
+
