--- a/src/AppBundle/Resources/views/Part/index.html.twig
+++ b/src/AppBundle/Resources/views/Part/index.html.twig
@@ -11,12 +11,12 @@
 {% endblock page_name %}
 
 {% block content %}
-    <div class="col-md-12">
+    <div class="" style="margin-right: 0px; margin-left: 0px;">
         <button class="btn btn-success" style="margin-bottom: 15px;">
-            <a href="{{ path('admin_part_new') }}">Create a new entry</a>
+            <a href="{{ path('admin_part_new') }}">Add a New Part</a>
         </button>
-        <div class="table-responsive">
-            <table class="table table-striped table-bordered table-advance table-hover">
+        <div class="table">
+            <table id="part-table" class="table table-striped table-bordered" cellspacing="0" width="100%">
                 <thead>
                 <tr>
                     <th>Stocknumber</th>
@@ -31,8 +31,8 @@
                     <tr>
                         <td>{{ part.stockNumber }}</td>
                         <td>{{ part.description }}</td>
-                        <td>{{ part.partCategory.name }}</td>
-                        <td>{{ part.requireReturn ? 'Yes' : 'No' }}</td>
+                        <td class="show-for-large-only">{{ part.partCategory.name }}</td>
+                        <td class="show-for-large-only">{{ part.requireReturn ? 'Yes' : 'No' }}</td>
                         <td>
                             <ul>
                                 <a class="btn btn-default btn-xs purple"
@@ -50,3 +50,11 @@
     </div>
 
 {% endblock content %}
+
+{% block footer %}
+    <script>
+        $(document).ready(function () {
+            $('#part-table').DataTable();
+        });
+    </script>
+{% endblock footer %}
