Adding Datatables functionality

--- a/src/AppBundle/Resources/views/Admin/view_users.html.twig
+++ b/src/AppBundle/Resources/views/Admin/view_users.html.twig
@@ -14,9 +14,8 @@ All Registered Users
 
 {% block content %}
     <div class="col-md-12">
-        <div class="table-responsive">
-            <table class="table table-striped table-bordered table-advance table-hover">
-                <caption>All Users</caption>
+        <div class="table">
+            <table id="part-table" class="table table-striped table-bordered" cellspacing="0" width="100%">
             <thead>
             <tr>
                 <th>Name</th>
@@ -67,3 +66,11 @@ All Registered Users
     </div>
 
 {% endblock content %}
+
+{% block footer %}
+    <script>
+        $(document).ready(function () {
+            $('#part-table').DataTable();
+        });
+    </script>
+{% endblock footer %}
