--- a/src/AppBundle/Resources/views/User/home.html.twig
+++ b/src/AppBundle/Resources/views/User/home.html.twig
@@ -47,7 +47,6 @@
         <div class="col-md-2 col-sm-4 col-md-offset-4">
             <div class="stats-overview stat-block">
                 <div class="display stat bad huge">
-
                 </div>
                 <div class="details">
                     <div class="title">
@@ -73,22 +72,92 @@
 {% endblock page_name %}
 
 {% block content %}
-            <div class="col-md-12">
-                <div class="stats-overview stat-block">
-                    <div class="display stat ok huge">
+    <div class="col-md-12">
+        <div class="stats-overview stat-block">
+            <div class="display stat ok huge">
 
-                    </div>
-                    <div class="details">
+            </div>
+            <div class="details">
 
-                        <div class="numbers">
-                            PRODUCT SHOPPING CART
-                        </div>
-                        <hr>
-                        <div class="title" style="padding-bottom: 10px; padding-top: 10px;">
-                            No products currently in cart.
-                        </div>
-                    </div>
+                <div class="numbers">
+                    PRODUCT SHOPPING CART
+                </div>
+                <hr>
+                <div class="title" style="padding-bottom: 10px; padding-top: 10px;">
+                    No products currently in cart.
                 </div>
             </div>
+        </div>
+    </div>
 
+    <div class="col-md-12" style="margin-top: 30px;">
+        <div class="stats-overview stat-block">
+            <div class="display stat ok huge">
+
+            </div>
+            <div class="details">
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="numbers">
+                            PRODUCT SEARCH
+                        </div>
+                    </div>
+                    <div class="col-md-5">
+
+                    </div>
+                    <div class="col-md-4">
+                        <input type="text" class="form-control" id="myInputTextField"
+                               placeholder="Search by product Description or Number">
+                    </div>
+                </div>
+                <hr>
+                <div class="title" style="padding-bottom: 10px; padding-top: 10px;">
+                    <table id="part-table" class="table table-striped" cellspacing="0">
+                        <thead>
+                        <tr>
+                            <th>PRODUCT #</th>
+                            <th>DESCRIPTION</th>
+                            <th>PHOTO</th>
+                            <th width="30px">REQUIRING RETURN</th>
+                            <th width="40px">ADD TO CART</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for product in products %}
+                            <tr>
+                                <td>{{ product.stockNumber }}</td>
+                                <td>{{ product.description }}</td>
+                                <td>
+                                    <center>
+                                        <i class="fa fa-camera" style="font-size: 22px;"></i>
+                                    </center>
+                                </td>
+                                <td>{{ product.requireReturn ? "<center><i class='fa fa-check-circle-o' style='font-size: 25px;'></i></center>" : '' }}</td>
+                                <td>
+                                    <center>
+                                        <i class="fa fa-shopping-cart" style="font-size: 25px;"></i>
+                                    </center>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock content %}
+
+{% block footer %}
+    <script>
+        $(document).ready(function () {
+            oTable = $('#part-table').DataTable({
+                "paging": false,
+                "sDom": '<"top">rt<"bottom"lp><"clear">'
+            });
+            $('#myInputTextField').keyup(function () {
+                oTable.search($(this).val()).draw();
+            })
+        });
+    </script>
+{% endblock footer %}
