--- a/src/AppBundle/Resources/views/User/home.html.twig
+++ b/src/AppBundle/Resources/views/User/home.html.twig
@@ -3,63 +3,8 @@
 {% block title %}Home{% endblock %}
 
 {% block page_title  %}
-    <div class="container">
-        <div class="col-md-3 col-sm-4">
-            <div class="stats-overview stat-block">
-                <div class="display stat ok huge">
 
-                </div>
-                <div class="details">
-                    <div class="title">
 
-                        Office Information
-                    </div>
-                    <hr>
-                    <div class="numbers">
-                        Office #40
-                    </div>
-                    <div class="title">
-                        Knoxville, TN
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-3 col-sm-4">
-            <div class="stats-overview stat-block">
-                <div class="display stat ok huge">
-
-                </div>
-                <div class="details">
-                    <div class="title">
-                        Current User
-                    </div>
-                    <hr>
-                    <div class="numbers">
-                        Matt Huddleston
-
-                    </div>
-                    <div class="title">
-                        Last Login:
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-2 col-sm-4 col-md-offset-4">
-            <div class="stats-overview stat-block">
-                <div class="display stat bad huge">
-                </div>
-                <div class="details">
-                    <div class="title">
-                        Items in Cart
-                    </div>
-                    <hr>
-                    <div class="numbers cart">
-                        0
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
     <style>
         .page-bar {
             display: none;
@@ -67,91 +12,154 @@
     </style>
 {% endblock page_title %}
 
-{% block page_name  %}
+{% block page_name %}
 
 {% endblock page_name %}
 
 {% block content %}
-    <div class="col-md-12">
-        <div class="stats-overview stat-block">
-            <div class="display stat ok huge">
+    <div ng-app="myShoppingList" ng-controller="myCtrl">
+        <div class="container">
+            <div class="col-md-3 col-sm-4">
+                <div class="stats-overview stat-block">
+                    <div class="display stat ok huge">
 
-            </div>
-            <div class="details">
+                    </div>
+                    <div class="details">
+                        <div class="title">
 
-                <div class="numbers">
-                    PRODUCT SHOPPING CART
+                            Office Information
+                        </div>
+                        <hr>
+                        <div class="numbers">
+                            Office #40
+                        </div>
+                        <div class="title user-info">
+                            Knoxville, TN
+                        </div>
+                    </div>
                 </div>
-                <hr>
-                <div class="title" style="padding-bottom: 10px; padding-top: 10px;">
-                    No products currently in cart.
+            </div>
+            <div class="col-md-3 col-sm-4">
+                <div class="stats-overview stat-block">
+                    <div class="display stat ok huge">
+
+                    </div>
+                    <div class="details">
+                        <div class="title">
+                            Current User
+                        </div>
+                        <hr>
+                        <div class="numbers">
+                            Matt Huddleston
+
+                        </div>
+                        <div class="title user-info">
+                            Last Login:
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-2 col-sm-4 col-md-offset-4">
+                <div class="stats-overview stat-block">
+                    <div class="display stat bad huge">
+                    </div>
+                    <div class="details">
+                        <div class="title">
+                            Items in Cart
+                        </div>
+                        <hr>
+                        <div class="numbers cart">
+                            <input ng-model="numItems" disabled style="background: transparent; border: none;">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div id="shopping-cart" class="col-md-12">
+            <div class="stats-overview stat-block">
+                <div class="display stat ok huge">
+
+                </div>
+                <div class="details">
+
+                    <div class="numbers">
+                        PRODUCT SHOPPING CART
+                    </div>
+                    <hr>
+                    <div class="title" style="padding-bottom: 10px; padding-top: 10px;">
+                        No products currently in cart.
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <div class="col-md-12" style="margin-top: 30px;">
-        <div class="stats-overview stat-block">
-            <div class="display stat ok huge">
+            <div class="col-md-12" style="margin-top: 30px;">
+                <div class="stats-overview stat-block">
+                    <div class="display stat ok huge">
 
-            </div>
-            <div class="details">
-                <div class="row">
-                    <div class="col-md-3">
-                        <div class="numbers">
-                            PRODUCT SEARCH
+                </div>
+                    <div class="details">
+                        <div class="row">
+                            <div class="col-md-3">
+                                <div class="numbers">
+                                    PRODUCT SEARCH
+                                </div>
+                            </div>
+                            <div id='filters' class="col-md-5">
+                                <select class="form-control">
+                                    <option value="*">-- All Categories --</option>
+                                    {% for category in categories %}
+                                        <option value=".{{ category.nameCononical }}">{{ category.name }}</option>
+                                    {% endfor %}
+                                </select>
+
                         </div>
+                            <div class="col-md-4">
+                                <input type="text" class="form-control" id="myInputTextField"
+                                       placeholder="Search by product Description or Number">
+                            </div>
                     </div>
-                    <div id='filters' class="col-md-5">
-                        <select class="form-control">
-                            <option value="*">-- All Categories --</option>
-                            {% for category in categories %}
-                                <option value=".{{ category.nameCononical }}">{{ category.name }}</option>
+                        <hr>
+                        <div class="title" style="padding-bottom: 10px; padding-top: 10px;">
+                            <table id="part-table" class="table table-striped  no-footer" cellspacing="0">
+                                <thead>
+                                <tr>
+                                    <th>PRODUCT #</th>
+                                    <th width="40px">PHOTO</th>
+                                    <th>DESCRIPTION</th>
+                                    <th width="30px">REQUIRE RETURN</th>
+                                    <th width="50px">ADD TO CART</th>
+                                </tr>
+                                </thead>
+                                <tbody id="container">
+                                {% for product in products %}
+                                    <tr class="grid-item {{ product.partCategory.nameCononical }}">
+                                        <td>{{ product.stockNumber }}</td>
+                                        <td>
+                                            <center>
+                                                <i class="fa fa-camera" style="font-size: 22px;color: #e2001a;"></i>
+                                            </center>
+                                        </td>
+                                        <td>{{ product.description }}</td>
+                                        <td>{{ product.requireReturn ? "<center><i class='fa fa-check-circle-o' style='font-size: 25px;color: #e2001a;'></i></center>" : '' }}</td>
+                                        <td>
+                                            <center>
+                                                <button ng-click="addItem({{ product.id }})"
+                                                        style="background: transparent; border: none;">
+                                                    <i class="fa fa-shopping-cart"
+                                                       style="font-size: 25px;color: #e2001a;"></i>
+                                                </button>
+                                            </center>
+                                        </td>
+                                    </tr>
                             {% endfor %}
-                        </select>
-
+                                </tbody>
+                            </table>
                     </div>
-                    <div class="col-md-4">
-                        <input type="text" class="form-control" id="myInputTextField"
-                               placeholder="Search by product Description or Number">
-                    </div>
-                </div>
-                <hr>
-                <div class="title" style="padding-bottom: 10px; padding-top: 10px;">
-                    <table id="part-table" class="table table-striped  no-footer" cellspacing="0">
-                        <thead>
-                        <tr>
-                            <th>PRODUCT #</th>
-                            <th width="40px">PHOTO</th>
-                            <th>DESCRIPTION</th>
-                            <th width="30px">REQUIRE RETURN</th>
-                            <th width="50px">ADD TO CART</th>
-                        </tr>
-                        </thead>
-                        <tbody id="container">
-                        {% for product in products %}
-                            <tr class="grid-item {{ product.partCategory.nameCononical }}">
-                                <td>{{ product.stockNumber }}</td>
-                                <td>
-                                    <center>
-                                        <i class="fa fa-camera" style="font-size: 22px;color: #e2001a;"></i>
-                                    </center>
-                                </td>
-                                <td>{{ product.description }}</td>
-                                <td>{{ product.requireReturn ? "<center><i class='fa fa-check-circle-o' style='font-size: 25px;color: #e2001a;'></i></center>" : '' }}</td>
-                                <td>
-                                    <center>
-                                        <a href="#">
-                                            <i class="fa fa-shopping-cart" style="font-size: 25px;color: #e2001a;"></i>
-                                        </a>
-                                    </center>
-                                </td>
-                            </tr>
-                        {% endfor %}
-                        </tbody>
-                    </table>
                 </div>
             </div>
+        </div>
         </div>
     </div>
 {% endblock content %}
@@ -184,6 +192,32 @@
                 });
             });
 
+        });
+        var app = angular.module("myShoppingList", []);
+        app.controller("myCtrl", function ($scope) {
+            $scope.numItems = 0;
+            $scope.cart = [];
+            $scope.products = [];
+
+            $.ajax({
+                beforeSend: function () {
+                    console.log('json start');
+                },
+                async: true,
+                type: 'GET',
+                url: "{{ path('json-get-products') }}",
+                success: function (data) {
+                    console.log(data);
+                    $scope.products = data;
+                }
+
+            });
+
+            $scope.addItem = function (item) {
+                $scope.numItems += 1;
+                $scope.cart.push(item);
+                console.log($scope.products);
+            }
         });
     </script>
 {% endblock footer %}
