--- a/src/AppBundle/Resources/views/User/home.html.twig
+++ b/src/AppBundle/Resources/views/User/home.html.twig
@@ -17,7 +17,7 @@
 {% endblock page_name %}
 
 {% block content %}
-    <div ng-app="myShoppingList" ng-controller="myCtrl">
+    <div ng-app="myShoppingList" ng-controller="myCtrl" ng-init="init()">
         <div class="container">
             <div class="col-md-3 col-sm-4">
                 <div class="stats-overview stat-block">
@@ -87,8 +87,57 @@
                         PRODUCT SHOPPING CART
                     </div>
                     <hr>
-                    <div class="title" style="padding-bottom: 10px; padding-top: 10px;">
-                        No products currently in cart.
+                    <div class="title" style="padding-bottom: 10px; padding-top: 0px; margin-top: -7px;">
+                        <div ng-if="numItems == 0">
+                            <div style="padding-bottom: 10px; padding-top: 20px;">
+                                No products currently in cart.
+                            </div>
+                        </div>
+                        {% verbatim %}
+<div ng-if="numItems != 0">
+ <table id="cart-table" class="table table-striped table-bordered" cellspacing="0">
+                                <thead>
+                                <tr>
+                                    <th width="12%">PRODUCT #</th>
+                                    <th width="30%">DESCRIPTION</th>
+                                    <th width="9%">RETURN REQUIRED</th>
+                                    <th width="40%">LINE NUMBER (S)</th>
+                                    <th width="9%">QUANTITY</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                    <tr ng-repeat="item in cart track by $index">
+                                    <div ng-if="angular.isobject(item)">
+                                        <td >{{ item.stock_number }}</td>
+                                        <td >{{ item.description }}</td>
+                                        <td >
+                                            <div ng-if="item.require_return == 1">
+                                                <center><i class='fa fa-check-circle-o' style='font-size: 25px;color: #e2001a;'></i></center>
+                                             </div>
+                                        </td>
+                                        <td >
+{{ $index }}
+                                        </td>
+                           <td>
+                                        <div class="row">
+                                                <button ng-click="addItem(item.id)" style="background: transparent; border: none;">
+                                                    <i class="fa fa-minus" style="font-size: 20px;color: #e2001a;"></i>
+                                                </button>
+                                            <center>
+                                                {{ item.quantity }}
+                                             </center>
+                                                <button ng-click="addItem(item.id)" style="background: transparent; border: none;">
+                                                    <i class="fa fa-plus" style="font-size: 20px;color: #e2001a;"></i>
+                                                </button>
+                                           </div>
+                                        </td>
+
+                                        </div>
+                                    </tr>
+                            </tbody>
+                            </table>
+                            </div>
+                        {% endverbatim %}
                     </div>
                 </div>
             </div>
@@ -128,7 +177,7 @@
                                     <th>PRODUCT #</th>
                                     <th width="40px">PHOTO</th>
                                     <th>DESCRIPTION</th>
-                                    <th width="30px">REQUIRE RETURN</th>
+                                    <th width="30px">RETURN REQUIRED</th>
                                     <th width="50px">ADD TO CART</th>
                                 </tr>
                                 </thead>
@@ -199,24 +248,30 @@
             $scope.cart = [];
             $scope.products = [];
 
-            $.ajax({
-                beforeSend: function () {
-                    console.log('json start');
-                },
-                async: true,
-                type: 'GET',
-                url: "{{ path('json-get-products') }}",
-                success: function (data) {
-                    console.log(data);
-                    $scope.products = data;
-                }
-
-            });
-
+            $scope.init = function () {
+                $.ajax({
+                    beforeSend: function () {
+                        console.log('json start');
+                    },
+                    type: 'GET',
+                    url: "{{ path('json-get-products') }}",
+                    success: function (data) {
+                        $scope.products = data;
+                        console.log($scope.products);
+                    }
+                });
+            };
+            $scope.inArray = function (item, array) {
+                return array.indexOf(item);
+            };
             $scope.addItem = function (item) {
                 $scope.numItems += 1;
-                $scope.cart.push(item);
-                console.log($scope.products);
+                tmp = $scope.inArray($scope.products[item], $scope.cart);
+                if (tmp != -1)
+                    $scope.cart[tmp].quantity += 1;
+                else
+                    $scope.cart.push($scope.products[item]);
+                console.log($scope.cart);
             }
         });
     </script>
