--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -18,6 +18,10 @@
     padding-top: 5vh;
 }
 
+.cart-item {
+    padding-top: 0px;
+    padding-bottom: 7px;
+}
 .user-info {
     margin-bottom: 8px;
     margin-top: 5px;
