--- a/src/AppBundle/Resources/views/User/home.html.twig
+++ b/src/AppBundle/Resources/views/User/home.html.twig
@@ -99,10 +99,10 @@
                                 <thead>
                                 <tr>
                                     <th width="12%">PRODUCT #</th>
-                                    <th width="30%">DESCRIPTION</th>
+                                    <th width="29%">DESCRIPTION</th>
                                     <th width="9%">RETURN REQUIRED</th>
-                                    <th width="40%">LINE NUMBER (S)</th>
-                                    <th width="9%">QUANTITY</th>
+                                    <th width="35%">LINE NUMBER (S)</th>
+                                    <th width="15%">QUANTITY</th>
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -115,20 +115,34 @@
                                                 <center><i class='fa fa-check-circle-o' style='font-size: 25px;color: #e2001a;'></i></center>
                                              </div>
                                         </td>
-                                        <td >
-{{ $index }}
+                                        <td>
+                                           <div ng-repeat="num in item.line_numbers track by $index" style="    display: inline-flex;">
+                                                <input ng-model="num" type="text" class="form-control line-number" ng-change="updateLineNumber(num, $index, item.id)" maxlength="4" style="    width: 60px;">
+                                           </div>
+                                            <button ng-click="removeLineNumber(item.id, $index)" style="background: transparent; border: none;">
+                                                    <i class="fa fa-minus" style="font-size: 20px;color: #e2001a;"></i>
+                                                </button>
+                                           <button ng-click="addLineNumber($index)" style="background: transparent; border: none;">
+                                                    <i class="fa fa-plus" style="font-size: 20px;color: #e2001a;"></i>
+                                                </button>
                                         </td>
                            <td>
                                         <div class="row">
-                                                <button ng-click="addItem(item.id)" style="background: transparent; border: none;">
+                                            <div class="col-md-4">
+                                                <button ng-click="removeItem(item.id)" style="background: transparent; border: none;">
                                                     <i class="fa fa-minus" style="font-size: 20px;color: #e2001a;"></i>
                                                 </button>
+                                            </div>
+                                            <div class="col-md-2">
                                             <center>
                                                 {{ item.quantity }}
                                              </center>
+                                             </div>
+                                             <div class="col-md-4">
                                                 <button ng-click="addItem(item.id)" style="background: transparent; border: none;">
                                                     <i class="fa fa-plus" style="font-size: 20px;color: #e2001a;"></i>
                                                 </button>
+                                              </div>
                                            </div>
                                         </td>
 
@@ -264,15 +278,38 @@
             $scope.inArray = function (item, array) {
                 return array.indexOf(item);
             };
+
             $scope.addItem = function (item) {
                 $scope.numItems += 1;
                 tmp = $scope.inArray($scope.products[item], $scope.cart);
                 if (tmp != -1)
                     $scope.cart[tmp].quantity += 1;
-                else
+                else {
                     $scope.cart.push($scope.products[item]);
-                console.log($scope.cart);
-            }
+                    tmp = $scope.inArray($scope.products[item], $scope.cart);
+                    $scope.cart[tmp].quantity += 1;
+                }
+            };
+
+            $scope.addLineNumber = function (item) {
+                $scope.cart[item].line_numbers.push('');
+            };
+            $scope.updateLineNumber = function (value, index, item) {
+                tmp = $scope.inArray($scope.products[item], $scope.cart);
+                $scope.cart[tmp].line_numbers[index] = value;
+                console.log($scope.cart[tmp]);
+            };
+            $scope.removeLineNumber = function (item, num) {
+                tmp = $scope.inArray($scope.products[item], $scope.cart);
+                $scope.cart[tmp].line_numbers.splice($scope.cart[tmp].line_numbers.length - 1, 1);
+            };
+            $scope.removeItem = function (item) {
+                $scope.numItems -= 1;
+                tmp = $scope.inArray($scope.products[item], $scope.cart);
+                $scope.cart[tmp].quantity -= 1;
+                if ($scope.cart[tmp].quantity == 0)
+                    $scope.cart.splice(tmp, 1);
+            };
         });
     </script>
 {% endblock footer %}
