Adding Angular to the cart.

--- a/src/AppBundle/Resources/views/User/home.html.twig
+++ b/src/AppBundle/Resources/views/User/home.html.twig
@@ -17,7 +17,7 @@
 {% endblock page_name %}
 
 {% block content %}
-    <div ng-app="myShoppingList" ng-controller="myCtrl" ng-init="init()">
+    <div ng-app="myShoppingList" ng-controller="myCtrl" ng-init="init()" class="ng-cloak" ng-cloak>
         <div class="container">
             <div class="col-md-3 col-sm-4">
                 <div class="stats-overview stat-block">
