--- a/src/AppBundle/Resources/views/User/home.html.twig
+++ b/src/AppBundle/Resources/views/User/home.html.twig
@@ -18,7 +18,7 @@
 
 {% block content %}
     <div ng-app="myShoppingList" ng-controller="myCtrl" ng-init="init()" class="ng-cloak" ng-cloak>
-        <div class="container">
+        <div class="row">
             <div class="col-md-3 col-sm-4">
                 <div class="stats-overview stat-block">
                     <div class="display stat ok huge">
