--- a/src/AppBundle/Resources/views/User/review-order.html.twig
+++ b/src/AppBundle/Resources/views/User/review-order.html.twig
@@ -1,235 +1,97 @@
-{% extends ":template:layout.html.twig" %}
+{% extends "AppBundle:User:cart-header.html.twig" %}
+{% block title %}Review Order{% endblock %}
+{% block cart %}
+    <div id="shopping-cart" class="col-xs-12">
+        <div class="stats-overview stat-block">
+            <div class="display stat ok huge">
 
-{% block title %}Home{% endblock %}
-
-{% block page_title %}
-
-
-    <style>
-        .page-bar {
-            display: none;
-        }
-    </style>
-{% endblock page_title %}
-
-{% block page_name %}
-
-{% endblock page_name %}
-
-{% block content %}
-    <div ng-app="myShoppingList" ng-controller="myCtrl" ng-init="init()" class="ng-cloak" ng-cloak>
-        <div class="row">
-            <div class="col-md-3 col-sm-4">
-                <div class="stats-overview stat-block">
-                    <div class="display stat ok huge">
-
-                    </div>
-                    <div class="details">
-                        <div class="title">
-
-                            Office Information
-                        </div>
-                        <hr>
-                        <div class="numbers">
-                            {{ app.user.office.name }}
-                        </div>
-                        <div class="title user-info">
-                            {{ app.user.office.city }}, {{ app.user.office.state }}
-                        </div>
-                    </div>
-                </div>
             </div>
-            <div class="col-md-3 col-sm-4">
-                <div class="stats-overview stat-block">
-                    <div class="display stat ok huge">
-
+            <div class="details">
+                <div class="invoice">
+                    <div class="numbers">
+                        REVIEW ORDER
                     </div>
-                    <div class="details">
-                        <div class="title">
-                            Current User
-                        </div>
-                        <hr>
-                        <div class="numbers">
-                            {{ app.user.firstName }} {{ app.user.lastName }}
-                        </div>
-                        <div class="title user-info">
-                            Last Login: {{ app.user.lastLogin |date("m/d/Y") }}
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-2 col-sm-4 col-md-offset-4">
-                <div class="stats-overview stat-block">
-                    <div class="display stat bad huge">
-                    </div>
-                    <div class="details">
-                        <div class="title">
-                            Items in Cart
-                        </div>
-                        <hr>
-                        <div class="numbers cart">
-                            <input ng-model="numItems" disabled style="background: transparent; border: none;">
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
-            <div id="shopping-cart" class="col-md-12">
-                <div class="stats-overview stat-block">
-                    <div class="display stat ok huge">
-
-                    </div>
-                    <div class="details">
-
-                        <div class="numbers">
-                            PRODUCT SHOPPING CART
-                        </div>
-                        <hr>
-                        <div class="title" style="padding-bottom: 10px; padding-top: 0px; margin-top: -7px;">
-                            <div ng-if="numItems == 0">
-                                <div style="padding-bottom: 10px; padding-top: 20px;">
-                                    No products currently in cart.
-                                </div>
-                            </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-xs-12">
                             {% verbatim %}
-<div ng-if="numItems != 0">
- <table id="cart-table" class="table table-striped table-bordered" cellspacing="0">
+                            <table class="table table-striped table-hover" style="margin-top: 40px;">
                                 <thead>
                                 <tr>
-                                    <th width="12%">PRODUCT #</th>
-                                    <th width="29%">DESCRIPTION</th>
-                                    <th width="9%">RETURN REQUIRED</th>
-                                    <th width="35%">LINE NUMBER (S)</th>
-                                    <th width="15%">QUANTITY</th>
+                                    <th>
+                                        PRODUCT #
+                                    </th>
+                                    <th class="hidden-480">
+                                        DESCRIPTION
+                                    </th>
+                                    <th class="hidden-480">
+                                        RETURN REQUIRED
+                                    </th>
+                                    <th class="hidden-480">
+                                        LINE NUMBERS
+                                    </th>
+                                    <th>
+                                        QUANTITY
+                                    </th>
                                 </tr>
                                 </thead>
                                 <tbody>
-                                    <tr ng-repeat="item in cart track by $index">
+                                <div ng-if="numItems == 0">
+                        <div style="padding-bottom: 10px; padding-top: 20px;">
+                            No products currently in cart.
+                        </div>
+                    </div>
+                    <div ng-if="numItems != 0">
+                                <tr ng-repeat="item in cart track by $index">
                                     <div ng-if="angular.isobject(item)">
                                         <td style="padding-top: 20px;">{{ item.stock_number }}</td>
                                         <td style="padding-top: 20px;">{{ item.description }}</td>
                                         <td  style="padding-top: 20px;">
                                             <div ng-if="item.require_return == 1">
                                                 <center><i class='fa fa-check-circle-o' style='font-size: 25px;color: #e2001a;'></i></center>
-                                             </div>
-                                        </td>
-                                        <td>
-                                           <div ng-repeat="num in item.line_numbers track by $index" style="display: inline-block;">
-                                                <input ng-model="num.line_number" type="text" class="form-control line-number" ng-change="updateLineNumber(num)" maxlength="4" style="width: 60px;">
-                                           </div>
-                                           <div style="display: inline-flex;">
-                                            <button ng-click="removeLineNumber(item.id)" style="background: transparent; border: none;">
-                                                    <i class="fa fa-minus" style="font-size: 20px;color: #e2001a;"></i>
-                                                </button>
-                                           <button ng-click="addLineNumber(item.id)" style="background: transparent; border: none;">
-                                                    <i class="fa fa-plus" style="font-size: 20px;color: #e2001a;"></i>
-                                                </button>
-                                                </div>
-                                        </td>
-                           <td style="padding-top: 20px;">
-                                        <div class="row">
-                                            <div class="col-md-4">
-                                                <button ng-click="removeItem(item.id)" style="background: transparent; border: none;">
-                                                    <i class="fa fa-minus" style="font-size: 20px;color: #e2001a;"></i>
-                                                </button>
                                             </div>
-                                            <div class="col-md-2">
-                                            <center>
-                                                {{ item.quantity }}
-                                             </center>
-                                             </div>
-                                             <div class="col-md-4">
-                                                <button ng-click="addItem(item.id)" style="background: transparent; border: none;">
-                                                    <i class="fa fa-plus" style="font-size: 20px;color: #e2001a;"></i>
-                                                </button>
-                                              </div>
-                                           </div>
+                                        </td>
+                                        <td>
+                                            <div ng-repeat="num in item.line_numbers track by $index" style="display: inline-block;">
+                                                <input ng-model="num.line_number" type="text" class="form-control line-number" disabled ng-change="updateLineNumber(num)" maxlength="4" style="width: 60px;">
+                                            </div>
+                                        </td>
+                                        <td style="padding-top: 20px;">
+                                            <div class="row">
+                                                    <center>
+                                                        {{ item.quantity }}
+                                                    </center>
+
+                                            </div>
                                         </td>
 
-                                        </div>
-                                    </tr>
-                            </tbody>
-                            </table>
-                            <div class="container">
-                                <button type="button" class="btn btn-primary" style="float: right;margin-right: 38px;">REVIEW ORDER</button>
-                            </div>
-                            </div>
-                        {% endverbatim %}
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-12" style="margin-top: 30px;">
-                <div class="stats-overview stat-block">
-                    <div class="display stat ok huge">
-
-                    </div>
-                    <div class="details">
-                        <div class="row">
-                            <div class="col-md-3">
-                                <div class="numbers">
-                                    PRODUCT SEARCH
-                                </div>
-                            </div>
-                            <div id='filters' class="col-md-5">
-                                <select class="form-control">
-                                    <option value="*">-- All Categories --</option>
-                                    {% for category in categories %}
-                                        <option value=".{{ category.nameCononical }}">{{ category.name }}</option>
-                                    {% endfor %}
-                                </select>
-
-                            </div>
-                            <div class="col-md-4">
-                                <input type="text" class="form-control" id="myInputTextField"
-                                       placeholder="Search by product Description or Number">
-                            </div>
-                        </div>
-                        <hr>
-                        <div class="title" style="padding-bottom: 10px; padding-top: 10px;">
-                            <table id="part-table" class="table table-striped  no-footer" cellspacing="0">
-                                <thead>
-                                <tr>
-                                    <th>PRODUCT #</th>
-                                    <th width="40px">PHOTO</th>
-                                    <th>DESCRIPTION</th>
-                                    <th width="30px">RETURN REQUIRED</th>
-                                    <th width="50px">ADD TO CART</th>
+                                    </div>
                                 </tr>
-                                </thead>
-                                <tbody id="container">
-                                {% for product in products %}
-                                    <tr class="grid-item {{ product.partCategory.nameCononical }}">
-                                        <td>{{ product.stockNumber }}</td>
-                                        <td>
-                                            <center>
-                                                <i class="fa fa-camera" style="font-size: 22px;color: #e2001a;"></i>
-                                            </center>
-                                        </td>
-                                        <td>{{ product.description }}</td>
-                                        <td>{{ product.requireReturn ? "<center><i class='fa fa-check-circle-o' style='font-size: 25px;color: #e2001a;'></i></center>" : '' }}</td>
-                                        <td>
-                                            <center>
-                                                <button ng-click="addItem({{ product.id }})"
-                                                        style="background: transparent; border: none;">
-                                                    <i class="fa fa-shopping-cart"
-                                                       style="font-size: 25px;color: #e2001a;"></i>
-                                                </button>
-                                            </center>
-                                        </td>
-                                    </tr>
-                                {% endfor %}
+                                </div>
                                 </tbody>
                             </table>
+                            {% endverbatim %}
+                        </div>
+                    </div>
+                    <div class="row" style="padding-bottom: 25px;">
+                        <div class="col-xs-4">
+                        </div>
+                        <div class="col-xs-8 invoice-block">
+
+                            <br/>
+                            <a class="btn btn-lg btn-info hidden-print" onclick="window.print();">Print <i
+                                        class="fa fa-print"></i></a>
+                            <a class="btn btn-lg btn-success hidden-print"
+                               href="{{ path('submit-cart', {'cart_id': cart_id}) }}">
+                                Submit Your Order <i class="fa fa-check"></i></a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-{% endblock content %}
+
+{% endblock cart %}
 
 {% block footer %}
     <script>
